--- a/index.html
+++ b/index.html
@@ -472,13 +472,18 @@
 							<h5 class="text-5 mb-2 pb-1">FaceBook</h5>
 							<div class="fb-page"
 								data-href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-								data-tabs="timeline,messages" data-width="400" data-height="300" data-small-header="true"
-								data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
-								<blockquote cite="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+								data-tabs="timeline,messages"
+                data-width="400"
+                data-height="300"
+                data-small-header="true"
+								data-adapt-container-width="true"
+                data-hide-cover="false"
+                data-show-facepile="false">
+								<!-- <blockquote cite="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
 									class="fb-xfbml-parse-ignore">
 									<a
 										href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/">養聲堂科技</a>
-								</blockquote>
+								</blockquote> -->
 							</div>							
 						</div>
 
@@ -510,33 +515,37 @@
 								</div>
 								<div class="col-sm-12 col-md-7">
 									<div>
-										<h3 class="media-heading">
-											手機藍牙 無線麥克風擴音音箱來了!
-                    </h3>
+										<div class="media-heading-main">
+                      世界首創手機藍牙無線麥克風擴音音箱
+                    </div>
 									</div>
-									<p class="media-content">
-										台灣開發設計製造 
+                  <div class="subTitle-main">
+                    台灣創新設計
                     <a href="YS250.html" class="media-link"
                       onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">YS-250
                     </a> 首發上市
-                    <br>
+                  </div>
+									<p class="media-content-main">
                     <a href="promote_202206.html" class="media-link">
-                      <span>擴音音箱組合包</span>
+                      <span>音箱組合包</span>
                     </a>
-                    |
+                    <span style="padding: 0 5px">|</span>
 										<a href="http://youngtone.com.tw/service.html?service=microphoneUpgrade"
 										 class="media-link">麥克風升級
                     </a>
 									</p>
-									<p style="margin:10px 0 13px 0;font-size: 20px;font-weight: 500">
-										<span style="color:#999999;">了解新產品及優惠活動，請點擊 :</span>
-										<br>
+									<p style="margin:0;padding-top:5px;font-size: 18px;font-weight: normal">
+										<span style="color:#666666;">了解產品詳情，請點擊 :</span>
+                  </p>
+                  <p class="media-content-main">
 										<a href="/products.html" class="media-link">
 											<span>產品介紹</span>
-										</a> |
+										</a>
+                    <span style="padding: 0 5px">|</span>
 										<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" class="media-link" target="_blank">
 											<span>Youtube 頻道</span>
-										</a> |
+										</a>
+                    <span style="padding: 0 5px">|</span>
 										<a
 											href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
                       class="media-link" target="_blank">
