--- a/service.html
+++ b/service.html
@@ -328,8 +328,8 @@
                                 兩邊同時按 2 sec.
                               </td>
                               <td>
-                                <strong>麥克風：</strong>紅燈亮後，燈號<span style="border-bottom:1px solid #666">全滅</span>。<br>
-                                <strong>音箱：</strong>藍燈亮後，燈號<span style="border-bottom:1px solid #666">全滅</span>。
+                                <strong>麥克風：</strong>紅燈亮後，燈號全滅。<br>
+                                <strong>音箱：</strong>藍燈亮後，燈號全滅。
                               </td>
                             </tr>
                             <tr>
@@ -338,9 +338,9 @@
                               </td>
                               <td></td>
                               <td>
-                                <strong>充電中：</strong><span style="border-bottom:1px solid #666">紅燈恆亮</span>
+                                <strong>充電中：</strong>紅燈恆亮
                                 <br>
-                                <strong>充電已完成：</strong><span style="border-bottom:1px solid #666">藍燈恆亮</span>
+                                <strong>充電已完成：</strong>藍燈恆亮
                               </td>
                             </tr>
                             <tr>
@@ -348,7 +348,7 @@
                                 <strong>配 對</strong>
                               </td>
                               <td>
-                                麥克風/音箱並列同時按下按鍵持續 6~7 秒 ~ <span style="border-bottom:1px solid #666">藍燈長亮</span>後放開按鍵
+                                麥克風/音箱並列同時按下按鍵持續 6~7 秒 ~ 藍燈長亮後放開按鍵
                               </td>
                               <td>
                                 <strong>使用時機：</strong>手機配對、更換新產品組 合、產品送修有更換主機板時
@@ -365,11 +365,8 @@
                               連線是依音箱最後使用過的麥克風順序循序搜尋，若不是最後一次用的麥克風，開機後需等5~6秒才能連線 )</span>
                           </li>
                           <li class="text-4">若是<strong>使用中欲從麥克風 A 切換為麥克風 B</strong>；可以先將麥克風 A 關機 ( 無線音箱不用關機 ) <i
-                              class="fas fa-arrow-right"></i> 開啟麥克風 B <i class="fas fa-arrow-right"></i> 開啟後<span
-                              style="border-bottom:1px solid #666">再短按開機鍵</span>一次；即可連線‧</li>
-                          <li class="text-4"><strong>連結手機：</strong>與手機，平板，<span
-                              style="border-bottom:1px solid #666">筆電</span>配對時，先將擴音音箱進入配對模式 ( 音頻主機/音箱按鍵持續 7 秒，<span
-                              style="border-bottom:1px solid #666">藍燈長亮</span> )，開啟<span style="border-bottom:1px solid #666">手機端藍牙</span>
+                              class="fas fa-arrow-right"></i> 開啟麥克風 B <i class="fas fa-arrow-right"></i> 開啟後再短按開機鍵一次；即可連線‧</li>
+                          <li class="text-4"><strong>連結手機：</strong>與手機，平板，筆電配對時，先將擴音音箱進入配對模式 ( 音頻主機/音箱按鍵持續 7 秒，藍燈長亮 )，開啟手機端藍牙
                             <i class="fas fa-arrow-right"></i> 搜尋設備 <i class="fas fa-arrow-right"></i> 出現設備音箱型號
                             <strong>"YS-250"</strong>，點擊連線。行動裝置顯示 "已連線" 即可已開始使用 ( 音頻主機為 YS-200 )</li>
                         </ul>
@@ -452,14 +449,12 @@
                         <p class="line-height-7 text-4 mb-0">
                           但改變或增加產品發射端/接收端組合時，新產品第一次需做"配對"的動作，只需做一次連線資料就會被記憶在設備中。只要配對一次，可被記憶在兩端的設備內，不需再作配對。</p>
                         <p class="line-height-7 text-4 mb-0 mt-0 pt-0">
-                          <span class="font-weight-extra-bold text-4">操作方式為：</span><br>
-                          <span class="text-success">先確定兩邊關機後，發射 / 接收兩套件並列，同時按下按鍵持續 7 秒，"直到<span
-                              style="border-bottom:1px solid #666">藍燈長亮</span>後再放開" ( 擴音音箱會有配對提示音 )，<span
-                              style="border-bottom:1px solid #666">待長亮</span>燈號熄滅後，就已連線，開始使用。</span>
+                          <span class="font-weight-extra-bold text-4">操作方式為：</span>
+                          <br>
+                          <span>先確定兩邊關機後，發射 / 接收兩套件並列，同時按下按鍵持續 7 秒，"直到藍燈長亮後再放開" ( 擴音音箱會有配對提示音 )，待長亮燈號熄滅後，就已連線，開始使用。</span>
                         </p>
                         <blockquote class="blockquote-secondary">
-                          <p class="line-height-7 text-4 mb-0">是一直按著兩邊的按鈕 7 秒 <span class="text-danger">"直到<span
-                                style="border-bottom:1px solid #666">藍燈長亮</span>後再放開"</span></p>
+                          <p class="line-height-7 text-4 mb-0">是一直按著兩邊的按鈕 7 秒 <span class="text-danger">"直到藍燈長亮後再放開"</span></p>
                         </blockquote>
                         <p class="font-weight-extra-bold line-height-7 text-4 mb-0 mt-0 pt-0">優點：</p>
                         <ul class="list list-icons list-icons-lg">
@@ -473,8 +468,7 @@
                           </li>
                           <li>
                             <i class="fas fa-angle-right"></i>
-                            <span class="text-4">又或，未來同一個麥克風，在教室可以有接擴音器的主機端接收盒，離開教室換成接<span
-                                style="border-bottom:1px solid #666">無線小音箱...</span>，是蠻方便的。</span>
+                            <span class="text-4">又或，未來同一個麥克風，在教室可以有接擴音器的主機端接收盒，離開教室換成接無線小音箱...，是蠻方便的。</span>
                           </li>
                         </ul>
                       </div>
@@ -489,8 +483,8 @@
                     <section class="toggle active">
                       <a class="toggle-title text-4">海綿套</a>
                       <div id="ds_1" class="toggle-content">
-                        <p class="line-height-7 text-4 mb-0">海綿套的功能主要在於去<span style="border-bottom:1px solid #666">風切聲</span>，若有沾到粉筆灰或汙染
-                          ，可取下用水洗淨風乾 ( 不可使用酒精等<span style="border-bottom:1px solid #666">揮發性易體清洗</span> )。</p>
+                        <p class="line-height-7 text-4 mb-0">海綿套的功能主要在於去風切聲，若有沾到粉筆灰或汙染
+                          ，可取下用水洗淨風乾 ( 不可使用酒精等揮發性易體清洗 )。</p>
                         <p class="line-height-7 text-4 mb-0 mt-0 pt-0">此為消耗品，可購買更換。</p>
                       </div>
                     </section>
@@ -518,11 +512,8 @@
                     <section class="toggle">
                       <a class="toggle-title text-4">避嘯叫</a>
                       <div id="ds_3" class="toggle-content">
-                        <p class="line-height-7 text-4 mb-0">嘯叫，一般是因為你麥克風對準你的嘴巴之外，可能方向也同時對到了喇叭正面 ( 嘴巴和喇叭同一方向 )，造成麥克風重複收音，<span
-                            style="border-bottom:1px solid #666">產生嘯叫</span>。</p>
-                        <p class="line-height-7 text-4 mb-0 mt-0 pt-0">我們的麥克風整體設計上，最基礎的規格是須<span
-                            style="border-bottom:1px solid #666">避免嘯叫</span>，產品有特別避免<span
-                            style="border-bottom:1px solid #666">發生嘯叫</span>的設計，除非麥克風放在喇叭前 5 cm，幾乎不會有此現象。</p>
+                        <p class="line-height-7 text-4 mb-0">嘯叫，一般是因為你麥克風對準你的嘴巴之外，可能方向也同時對到了喇叭正面 ( 嘴巴和喇叭同一方向 )，造成麥克風重複收音，產生嘯叫。</p>
+                        <p class="line-height-7 text-4 mb-0 mt-0 pt-0">我們的麥克風整體設計上，最基礎的規格是須避免嘯叫，產品有特別避免發生嘯叫的設計，除非麥克風放在喇叭前 5 cm，幾乎不會有此現象。</p>
                       </div>
                     </section>
                     <section class="toggle">
@@ -538,8 +529,7 @@
                             <i class="fas fa-angle-right"></i>
                             <span class="text-4">
                               <span class="font-weight-extra-bold">有線麥克風 : </span><br>
-                              <span>使用歷史悠久的產品，<span style="border-bottom:1px solid #666">動圈式</span>麥克風，簡單的基本構造包含線圈、<span
-                                  style="border-bottom:1px solid #666">振模</span>、永久磁鐵三部份，靈敏度較低，高低頻響應表現較差。優點是價格較便宜，聲音較為柔潤，價位也相對低廉。但是對教學有幾個缺點，接頭容易接觸不良、重量重、容易髒，無法符合今日走動教學的需要。</span>
+                              <span>使用歷史悠久的產品，動圈式麥克風，簡單的基本構造包含線圈、振模、永久磁鐵三部份，靈敏度較低，高低頻響應表現較差。優點是價格較便宜，聲音較為柔潤，價位也相對低廉。但是對教學有幾個缺點，接頭容易接觸不良、重量重、容易髒，無法符合今日走動教學的需要。</span>
                             </span>
                           </li>
                           <li>
@@ -553,7 +543,7 @@
                                 <i class="fas fa-caret-right"></i>
                                 <span class="text-4">
                                   <span class="font-weight-extra-bold">紅外線麥克風 : </span><br>
-                                  <span>紅外線屬不可見光，跟常見的電視遙控器相當，主要有方向性，光線走直線，<span style="border-bottom:1px solid #666">被遮到</span>就沒信號了。</span>
+                                  <span>紅外線屬不可見光，跟常見的電視遙控器相當，主要有方向性，光線走直線，被遮到</span>就沒信號了。</span>
                                 </span>
                               </li>
                               <li>
@@ -561,8 +551,7 @@
                                 <span class="text-4">
                                   <span class="font-weight-extra-bold">FM 麥克風 : </span><br>
                                   <span>與收音機相同，使用頻率調變(Frequency
-                                    Modulation)傳送聲音，成本低；但也無保密與抗干擾機制，遇干擾時需自行更改頻率。台灣是無法使用FM技術做相關應用，因地下電台的<span
-                                      style="border-bottom:1px solid #666">頻率蓋台</span>與過高的功率。常造成正規FM產品的干擾。</span>
+                                    Modulation)傳送聲音，成本低；但也無保密與抗干擾機制，遇干擾時需自行更改頻率。台灣是無法使用FM技術做相關應用，因地下電台的頻率蓋台與過高的功率。常造成正規FM產品的干擾。</span>
                                 </span>
                               </li>
                               <li>
@@ -601,14 +590,13 @@
                         <p class="line-height-7 text-4 mb-0">我們產品使用的藍牙無線頻率 2.4GHz，此為國際通用公開頻率，到任何國家可以直接使用，不需向政府申請 ( 不會發生如台灣近期 UHF 麥克風頻率與政府新開放
                           4G 手機信號衝突問題 )。</p>
                         <blockquote class="blockquote-secondary">
-                          <p class="line-height-7 text-4 mb-0">全球免申請 ISM 頻段：ISM 頻段是<span
-                              style="border-bottom:1px solid #666">各國</span>挪出某一段頻段主要開放給工業，科學和醫學機構使用。允許應用這些頻段的無線設備無需申請許可。</p>
+                          <p class="line-height-7 text-4 mb-0">全球免申請 ISM 頻段：ISM 頻段是各國</span>挪出某一段頻段主要開放給工業，科學和醫學機構使用。允許應用這些頻段的無線設備無需申請許可。</p>
                         </blockquote>
-                        <p>產品特色：</p>
+                        <p class="text-4">產品特色：</p>
                         <ul class="list list-icons list-icons-lg">
                           <li>
                             <i class="fas fa-angle-right"></i>
-                            <span class="text-4"><span style="border-bottom:1px solid #666">低功耗</span>/低輻射：同樣的使用時數下，重量只有 2.4G 的 1/6 ， UHF 的
+                            <span class="text-4">低功耗/低輻射：同樣的使用時數下，重量只有 2.4G 的 1/6 ， UHF 的
                               1/10。</span>
                           </li>
                           <li>
@@ -621,7 +609,7 @@
                           </li>
                           <li>
                             <i class="fas fa-angle-right"></i>
-                            <span class="text-4"><span style="border-bottom:1px solid #666">藍牙跳頻</span>技術：可有效避開 WiFi 干擾；目前 2.4G 麥克風普遍因
+                            <span class="text-4">藍牙跳頻技術：可有效避開 WiFi 干擾；目前 2.4G 麥克風普遍因
                               WiFi干擾造成沒有聲音現象，非常不穩定。</span>
                           </li>
                           <li>
@@ -635,13 +623,11 @@
                       <a class="toggle-title text-4">多組同時使用會不會發生串音或頻率干擾？</a>
                       <div id="dg_2" class="toggle-content">
                         <p class="line-height-7 text-4 mb-0">手機從 GSM 數位化後就大大提升安全性，不會被干擾。我們的產品也已經數位化，在實際使用上已有多所學校採購數十到 100 多套，皆可以到任何教室後
-                          開機<span
-                            style="border-bottom:1px solid #666">隨插即用</span>，絕對不會有頻道或干擾問題。蘋果公司周邊產品耳機手錶已出貨數億個，也沒有衝突的問題。同一個空間中，可以打開多組無線麥克風都可獨立連結運作。
+                          開機隨插即用，絕對不會有頻道或干擾問題。蘋果公司周邊產品耳機手錶已出貨數億個，也沒有衝突的問題。同一個空間中，可以打開多組無線麥克風都可獨立連結運作。
                         </p>
                         <p class="line-height-7 text-4 mb-0 mt-0 pt-0">另數位無線技術有增加特殊的跳頻 ( FHSS ) 和加密 ( Encryption ） 技術，可避免其他無線產品如 WiFi 的干擾。
                         </p>
-                        <p class="line-height-7 text-4 mb-0 mt-0 pt-0">一對一連線的特性，可以保證上、下、左、右、不同教室都能獨立運作不會相互干擾，<span
-                            style="border-bottom:1px solid #666">也沒需其他</span>無線產品複雜的對頻操作。</p>
+                        <p class="line-height-7 text-4 mb-0 mt-0 pt-0">一對一連線的特性，可以保證上、下、左、右、不同教室都能獨立運作不會相互干擾，也沒需其他無線產品複雜的對頻操作。</p>
                       </div>
                     </section>
                     <section class="toggle">
@@ -676,9 +662,7 @@
                             <span class="text-4">
                               <span class="font-weight-extra-bold">串音：</span><br>
                               <span>部分無線麥克風，頻度數不足，類比無法保密；另如
-                                2.4G，無線安全性低、<span
-                                  style="border-bottom:1px solid #666">防錯與保密</span>技術，容易被串音；隔壁/上下相鄰教室聲音所干擾。我們的無線麥克風是經數位化的保密與<span
-                                  style="border-bottom:1px solid #666">錯誤糾錯處理</span>，為避免其他無線信號干擾有跳頻(Hot doping)技術，除避免干擾外 還可讓聲音更清晰。</span>
+                                2.4G，無線安全性低、防錯與保密技術，容易被串音；隔壁/上下相鄰教室聲音所干擾。我們的無線麥克風是經數位化的保密與錯誤糾錯處理，為避免其他無線信號干擾有跳頻(Hot doping)技術，除避免干擾外 還可讓聲音更清晰。</span>
                             </span>
                           </li>
                         </ul>
@@ -691,8 +675,7 @@
                           為主，音質滑順、多個麥克風同時使用、功率可以調整(功率高讓傳輸穩定長時間可能傷身)以保證最佳效果，花費也相當昂貴，高達數萬元。市售大部分家用UHF克風以家用 KTV為主，相鄰頻道相同就可以合唱了，在學校
                           公共場所完全無法使用。</p>
                         <p class="line-height-7 text-4 mb-0 mt-0 pt-0">對教學 / 導覽 / 銷售工作而言，麥克風的需求主要是希望~~使用時間長、1對1
-                          使用不被相鄰設備干擾、輕薄短小/可攜帶，使用範圍 10~20米，操作簡單<span
-                            style="border-bottom:1px solid #666">隨插即用</span>，最重要價格實惠。以過去市面產品來看，FM、VHF、UHF 皆很難達到上述之目的。</p>
+                          使用不被相鄰設備干擾、輕薄短小/可攜帶，使用範圍 10~20米，操作簡單隨插即用，最重要價格實惠。以過去市面產品來看，FM、VHF、UHF 皆很難達到上述之目的。</p>
                       </div>
                     </section>
                   </div>
