--- a/YS100.html
+++ b/YS100.html
@@ -178,24 +178,34 @@
         </div>
       </section>
       <div id="tab" class="container pt-2">
-        <div class="row justify-content-end">
-          <div class="col-lg-3 col-md-6 m-0 p-0">
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-6 m-0 p-0">
             <div class="row m-0">
               <div class="col-6 m-0 p-1">
-                <a href="YS100.html" class="btn btn-primary btn-lg btn-block disabled">手持麥克風</a>
+                <a href="YS100.html" class="btn btn-primary btn-lg btn-block disabled">YS-100 手持麥克風</a>
               </div>
               <div class="col-6 m-0 p-1">
-                <a href="YS150.html" class="btn btn-primary btn-lg btn-block">頸卦麥克風</a>
+                <a href="YS150.html" class="btn btn-primary btn-lg btn-block">YS-150 頸掛麥克風</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 m-0 p-0">
+             <div class="row m-0">
+              <div class="col-6 m-0 p-1">
+                <a href="YS200.html" class="btn btn-secondary btn-lg btn-block">YS-200 音頻主機</a>
+              </div>
+              <div class="col-6 m-0 p-1">
+                <a href="YS250.html" class="btn btn-secondary btn-lg btn-block">YS-250 擴音音箱</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 m-0 p-0">
              <div class="row m-0">
               <div class="col-6 m-0 p-1">
-                <a href="YS200.html" class="btn btn-secondary btn-lg btn-block">音頻主機</a>
+                <a href="JavaScript:void(0)" onclick="window.history.back();" class="btn btn-light btn-lg btn-block">回上一頁</a>
               </div>
               <div class="col-6 m-0 p-1">
-                <a href="YS250.html" class="btn btn-secondary btn-lg btn-block">擴音音箱</a>
+                <a href="products.html" class="btn btn-light btn-lg btn-block">回產品頁</a>
               </div>
             </div>
           </div>
@@ -362,7 +372,7 @@
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
                   <h4 class="font-weight-semibold text-4 mb-0">重量 / 外觀 :</h4>
-                  <span class="text-4">75g，高度 17cm；麥克風剛好一手掌握，男女適用</span>
+                  <span class="text-4">75g，高度 12cm；麥克風剛好一手掌握，男女適用</span>
                 </li>
                 <li class="text-quaternary">
                   <i class="fas fa-check"></i>
