--- a/products.html
+++ b/products.html
@@ -52,6 +52,12 @@
           margin: 0;
           border-radius: 0;
       }
+      
+      @media screen and (min-width: 768px) {          
+        .align-right {   
+          margin-top: 100px;
+        }
+      }
       /* .thumb-info .thumb-info-wrapper-opacity-6:after {
           opacity: 0;
       } */
@@ -218,7 +224,7 @@
                     <div class="testimonial-arrow-down"></div>
                   </div>
                   
-                  <div class="mb-4 pb-2">
+                  <div class="mb-2 pb-2">
                     <div class="portfolio-item">
                       <a href="YS100.html">
                         <span
@@ -228,7 +234,7 @@
                             <span class="thumb-info-title bg-transparent p-4">
                               <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-100</span>
                               <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">手持無線麥克風</span>
-                              <span class="thumb-info-type opacity-6 text-4 text-dark">重量：70g 可用 17 小時</span>
+                              <span class="thumb-info-type opacity-6 text-4 text-dark" style="text-transform: none;">重量：75g 可用 17 小時</span>
                             </span>
                           </span>
                         </span>
@@ -236,7 +242,7 @@
                     </div>
                   </div>
 
-                  <div class="mb-4 pb-2">
+                  <div class="mb-2 pb-2">
                     <a href="YS150.html">
                       <span
                         class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
@@ -245,33 +251,37 @@
                           <span class="thumb-info-title bg-transparent p-4">
                             <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-150</span>
                             <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">頸掛穿戴無線麥克風</span>
-                            <span class="thumb-info-type opacity-6 text-4 text-dark">重量：43g 可用 13 小時</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark" style="text-transform: none;">重量：40g 可用 13 小時</span>
                           </span>
                         </span>
                       </span>
                     </a>
                   </div>
 
-                  <div class="mb-4 pb-2">
+                  <div class="mb-2 pb-2">
                     <span
                       class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom"
-                      style="border-width: 0;background-color: transparent;"
+                      style="border-radius: 4px;background-color: #ffffff;"
                       >
                         <img src="img/products/products_bluetooth.jpg" class="img-fluid" alt="YS-150 頸掛穿戴無線麥克風">
                         <span class="thumb-info-title bg-transparent p-4">
-                          <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">手機 / PC / NB 藍牙</span>
+                          <span class="thumb-info-type text-3 px-2 mb-2 text-center" style="width:50px;background-color: #b7b2b2">手機</span>
+                          <span class="thumb-info-type text-3 px-2 mb-2 text-center" style="width:50px;background-color: #b7b2b2">平板</span>
+                          <br>
+                          <span class="thumb-info-type text-3 px-2 mb-2 text-center" style="width:50px;background-color: #b7b2b2">PC</span>
+                          <span class="thumb-info-type text-3 px-2 mb-2 text-center" style="width:50px;background-color: #b7b2b2">NB</span>
                         </span>
                     </span>
                   </div>
 
-                  <div class="mb-4 pb-0">
-                    <a href="javascript:$('#YH801').modal('show')">
+                  <div class="mb-2 mt-4 pb-0">
+                    <a href="javascript:void(0)" data-toggle="modal" data-target="#YH801">
                       <span
-                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
+                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;border-width: 0;background-color: transparent;">
                         <span class="thumb-info-wrapper" style="height:150px">
                           <!-- <img src="img/products/products_yh801.jpg" class="img-fluid" alt="YH-801 一代無線麥克風組"> -->
                           <span class="thumb-info-title bg-transparent p-4">
-                            <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YH-801</span>
+                            <span class="thumb-info-type bg-light text-dark opacity-5 text-3 px-2 mb-2">YH-801</span>
                             <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">一代無線麥克風組 (已停產)</span>
                             <span class="thumb-info-type opacity-6 text-4 text-dark">售後維護服務</span>
                           </span>
@@ -290,7 +300,7 @@
                     <div class="testimonial-arrow-down"></div>
                   </div>
 
-                  <div class="mb-4 pb-2">
+                  <div class="mb-2 pb-2 align-right">
                     <a href="YS200.html" onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS200.html');">
                       <span
                         class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
@@ -299,14 +309,14 @@
                           <span class="thumb-info-title bg-transparent p-4">
                             <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-200</span>
                             <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">智慧無線接收主機</span>
-                            <span class="thumb-info-type opacity-6 text-4 text-dark">重量：40g 可用 18 小時</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark" style="text-transform: none;">重量：40g 可用 18 小時</span>
                           </span>
                         </span>
                       </span>
                     </a>
                   </div>
 
-                  <div class="mb-4 pb-0">
+                  <div class="mb-2 pb-0">
                     <a href="YS250.html" onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">
                       <span
                         class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
@@ -315,7 +325,7 @@
                           <span class="thumb-info-title bg-transparent p-4">
                             <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-250</span>
                             <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">無線擴音音箱</span>
-                            <span class="thumb-info-type opacity-6 text-4 text-dark">重量：299g 可用 13 小時<br>(與擴音音量大小有關)</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark" style="text-transform: none;">重量：299g 可用 13 小時<br>(與擴音音量大小有關)</span>
                           </span>
                         </span>
                       </span>
@@ -331,7 +341,7 @@
 			</div>
 
       <!-- YH-801 -->
-      <div class="modal fade" id="YH801" tabindex="-1" role="dialog" aria-labelledby="YH801Label"
+      <div id="YH801" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="YH801Label"
         aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
