--- a/products.html
+++ b/products.html
@@ -274,12 +274,11 @@
                     </span>
                   </div>
 
-                  <div class="mb-2 mt-4 pb-0">
+                  <div class="d-none d-sm-block mb-2 mt-4 pb-0 ">
                     <a href="javascript:void(0)" data-toggle="modal" data-target="#YH801">
                       <span
                         class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;border-width: 0;background-color: transparent;">
                         <span class="thumb-info-wrapper" style="height:150px">
-                          <!-- <img src="img/products/products_yh801.jpg" class="img-fluid" alt="YH-801 一代無線麥克風組"> -->
                           <span class="thumb-info-title bg-transparent p-4">
                             <span class="thumb-info-type bg-light text-dark opacity-5 text-3 px-2 mb-2">YH-801</span>
                             <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">一代無線麥克風組 (已停產)</span>
@@ -295,7 +294,7 @@
 
                   <div class="testimonial testimonial-secondary">
                     <blockquote>
-                      <div class="text-color-light line-height-2 text-5 font-weight-bold mb-0 text-center">收音 / 接收端</div>
+                      <div class="text-color-light line-height-2 text-5 font-weight-bold mb-0 text-center">擴音 / 接收端</div>
                     </blockquote>
                     <div class="testimonial-arrow-down"></div>
                   </div>
@@ -326,6 +325,22 @@
                             <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-250</span>
                             <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">無線擴音音箱</span>
                             <span class="thumb-info-type opacity-6 text-4 text-dark" style="text-transform: none;">重量：299g 可用 13 小時<br>(與擴音音量大小有關)</span>
+                          </span>
+                        </span>
+                      </span>
+                    </a>
+                  </div>
+
+                  <div class="d-block d-sm-none mb-2 mt-4 pb-0">
+                    <a href="javascript:void(0)" data-toggle="modal" data-target="#YH801">
+                      <span
+                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom"
+                        style="border-radius: 4px;border-width: 0;background-color: transparent;">
+                        <span class="thumb-info-wrapper" style="height:150px">
+                          <span class="thumb-info-title bg-transparent p-4">
+                            <span class="thumb-info-type bg-light text-dark opacity-5 text-3 px-2 mb-2">YH-801</span>
+                            <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">一代無線麥克風組 (已停產)</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark">售後維護服務</span>
                           </span>
                         </span>
                       </span>
